# paradime

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  README.rst  ideas.ipynb  playground.ipynb  pumap-dev.ipynb  pyproject.toml  requirements.txt  setup.py  testing.ipynb
assets/: make_palette.py  palette.json
docs/: requirements.txt
docs/source/: building_blocks.rst  conf.py  examples.rst  getting_started.nblink  getting_started.rst  grammar.rst  index.rst  installation.rst  simple_usage.nblink
docs/source/_templates/: layout.html
docs/source/api/: index.rst  modules.rst  paradime.rst
docs/source/examples/: custom.rst  guided.nblink  hybrid.nblink  latent_interventions.nblink  linear_tsne.rst  mds.nblink  supervised.nblink  supervised.rst  syntax_abuse.rst  umap.nblink  umap.rst  xai.nblink  xai.rst
docs/source/sphinxext/: ghlink.py
examples/: predefined-routine.py  predefined.py  supervised.py  umap.py
notebooks/: autoencoder.ipynb  cifar.ipynb  geodesic_dist_relation.ipynb  guided.ipynb  hybrid.ipynb  ideas.ipynb  isomap_comparison_large_example_faces.ipynb  isomap_comparison_large_example_swiss_roll.ipynb  isomap_comparison_small_example.ipynb  isomap_example.ipynb  latent_interventions.ipynb  linear.ipynb  mds.ipynb  playground.ipynb  predefined.ipynb  pumap-dev.ipynb  supervised.ipynb  timing_calc_dist_matr.ipynb  umap.ipynb  xai.ipynb
notebooks/paper-plots/: exaggeration.ipynb  guided.ipynb  mds.ipynb  mds.py  mds_runs.csv  predefined copy.ipynb  predefined.ipynb  umap.ipynb
notebooks/paper-plots/models/: guided-w-1.pt  guided-w100.pt  guided-w1000.pt  guided-w2000.pt  guided-w500.pt  guided-w5000.pt  w0.0.pt  w0.1.pt  w0.2.pt  w0.3.pt  w0.5.pt  w0.7.pt  w0.9.pt  w0.95.pt  w0.99.pt  w1.0.pt
paradime/: __init__.py  _version.py  affinity.py  affinitydata.py  api-examples.md  dissimilarity.py  dissimilaritydata.py  dr.py  exceptions.py  interface-examples.py  loss.py  models.py  modules.py  paradime.py  ptsne.py  relationdata.py  relations.py  routines.py  transforms.py  types.py  utils.py
paradime/utils/: __init__.py  _cmap.py  convert.py  logging.py  make_palette.py  palette.json  parsing.py  plotting.py  repr.py  seed.py
