[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paradime"
authors = [
    {   name="Andreas Hinterreiter", email="andreas.hinterreiter@jku.at" },
]
description = "A framework for parametric dimensionality reduction"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]
dependencies = [
    "numpy>=1.21, <1.23",
    "scipy>=1.7",
    "pynndescent>=0.5",
    "scikit-learn>=1.1",
]

[project.urls]
"Homepage" = "https://github.com/einbandi/paradime"
"Bug Tracker" = "https://github.com/einbandi/paradime/issues"
"Documentation" = "https://paradime.readthedocs.io/en/latest/index.html"

[tool.hatch.version]
path = "paradime/_version.py"